--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/vintique/src/assets/vintique.png"
-    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vintique</title>
+    <title>Shopzon</title>
   </head>
   <body>
     <div id="root"></div>
